[tool.poetry]
name = "jupyter_browser_clipboard"
version = "0.1.0"
description = "Copy text to OS clipboard when using Jupyter remotely"
authors = ["Blair Azzopardi <blairuk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
